generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Program {
  id              String      @id @default(uuid())
  name            String
  therapeuticArea String
  phase           String
  status          String
  description     String?

  studies         Study[]
  milestones      Milestone[]

  createdAt       DateTime    @default(now())
  updatedAt       DateTime?    @updatedAt
}

model Study {
  id                String   @id @default(uuid())
  name              String
  phase             String
  targetEnrollment  Int
  currentEnrollment Int

  programId         String
  program           Program  @relation(fields: [programId], references: [id], onDelete: Cascade)

  createdAt         DateTime @default(now())
  updatedAt         DateTime? @updatedAt
}

model Milestone {
  id            String    @id @default(uuid())
  title         String
  status        String
  targetDate    DateTime
  completedDate DateTime?         // ← add this

  programId     String
  program       Program   @relation(fields: [programId], references: [id], onDelete: Cascade)

  createdAt     DateTime  @default(now())
  updatedAt     DateTime?  @updatedAt
}